worked on getting logic correct in js, but didn't do anything with style yet

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <body>
     <h1>Code Quiz</h1>
-        <div id="wrapper">
+        <div id="container">
             <!-- Div for timer -->
             <div id="timeLeft"></div>
             <!-- Div for quiz content -->
             <div id="questionDiv">
                 <p>Answer the following code-related questions within the time limit. Incorrect
                     answers will penalize your time and score by 5 seconds. Good luck!</p>
-                <ul id="choicesUl"></ul>
+                <!--<ul id="choicesUl"></ul>-->
                 <!-- Buttons -->
                 <button onclick = "location.href='questions.html'" type="button" >Start Quiz</button>
             </div>
