--- a/questions.html
+++ b/questions.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <style src="style.css"></style>
+    <title>Questions</title>
 </head>
 <body>
     
     <div>
         <header>Code Quiz</header>
-        <div class="question"> 
+        <div class="question" id="questionContainer"> 
             <h2 id="question"></h2>
             <button id="opt1" class="btn1" onclick="answerGiven(1)"></button>
 
             <button id="opt2" class="btn2" onclick="answerGiven(2)"></button>
 
-            <button id="opt2" class="btn2" onclick="answerGiven(3)"></button>
+            <button id="opt3" class="btn3" onclick="answerGiven(3)"></button>
 
-            <button id="opt2" class="btn2" onclick="answerGiven(4)"></button>
-
+            <button id="opt4" class="btn4" onclick="answerGiven(4)"></button>
         </div>
-
+        <div class="finalResults" id="finalResults"></div> 
+        <div id="timer">Time Left</div>
     </div>
     <script src="questions.js"></script>
 </body>
