--- a/index.html
+++ b/index.html
@@ -10,28 +10,23 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!--Custom CSS-->
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="assets/style.css"/>
 
-    <title>Code Quiz</title>
+    <title>Code Quiz || Start Page</title>
 </head>
 
 <body>
-    <h1>Code Quiz</h1>
-        <div id="container">
-            <!-- Div for timer -->
-            <div id="timeLeft"></div>
-            <!-- Div for quiz content -->
-            <div id="questionDiv">
-                <p>Answer the following code-related questions within the time limit. Incorrect
-                    answers will penalize your time and score by 5 seconds. Good luck!</p>
-                <!--<ul id="choicesUl"></ul>-->
-                <!-- Buttons -->
-                <button onclick = "location.href='questions.html'" type="button" >Start Quiz</button>
-            </div>
-    
+    <div class = "container">
+        <h1>Code Quiz</h1>
+        <p>Answer the following code-related questions within the time limit. Incorrect
+            answers will penalize your time and score by 20 seconds. Good luck!</p>
+        <!-- Div for timer -->
+        <div id="timeLeft"></div>
+        <!-- Div for quiz content -->
+        <div id="questionDiv">
+            <button class="btn4 btn-primary btn-lg" onclick = "location.href='questions.html'" type="button" >Start Quiz</button>
         </div>
-
-
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -45,7 +40,8 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
 
-    <script src="script.js"></script>
+    <script src="/assets/questions.js"></script>
+
 </body>
 
 </html>
