--- a/questions.html
+++ b/questions.html
@@ -3,26 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style src="style.css"></style>
-    <title>Questions</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!--Custom CSS-->
+    <link rel="stylesheet" href="assets/style.css"/>
+
+    <title>Quiz Questions || Start Page</title>
 </head>
 <body>
-    
-    <div>
-        <header>Code Quiz</header>
+    <div class = "container">
+            <h1>Code Quiz</h1>
+            <p>Correct answers extends time...wrong answers take time away</p>
+        <!--<header>Code Quiz</header>-->
         <div class="question" id="questionContainer"> 
             <h2 id="question"></h2>
-            <button id="opt1" class="btn1" onclick="answerGiven(1)"></button>
-
-            <button id="opt2" class="btn2" onclick="answerGiven(2)"></button>
-
-            <button id="opt3" class="btn3" onclick="answerGiven(3)"></button>
-
-            <button id="opt4" class="btn4" onclick="answerGiven(4)"></button>
+            <!--<button id="opt1" class="btn1" onclick="answerGiven(1)"></button>-->
+            <button id="opt1" class="btn1 btn-primary btn-lg" onclick="answerGiven(1)"></button>
+            <button id="opt2" class="btn2 btn-primary btn-lg" onclick="answerGiven(2)"></button>
+            <button id="opt3" class="btn3 btn-primary btn-lg" onclick="answerGiven(3)"></button>
+            <button id="opt4" class="btn4 btn-primary btn-lg" onclick="answerGiven(4)"></button>
         </div>
-        <div class="finalResults" id="finalResults"></div> 
+        <br>
         <div id="timer">Time Left</div>
+        <div container class="finalResults" id="finalResults"></div>
     </div>
-    <script src="questions.js"></script>
+
+    <!--<div class="highscores"></div>
+        <div class="input-group">
+            <label for="initials">Enter initials</label>
+            <input type="text" id="initials-input" />
+            <button type="submit" id="initial-clickbutton" class="btn-primary btn-lg">Submit</button>
+        </div>
+    </div>-->
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
+    <script src="assets/questions.js"></script>
 </body>
 </html>
